--- a/SeniorProject/Views/Home/Index.cshtml
+++ b/SeniorProject/Views/Home/Index.cshtml
@@ -4,6 +4,16 @@
 }
 
 <body>
+    @if (ViewBag.Message != null)
+    {
+        <script type="text/javascript">
+            window.onload = function () {
+                alert("@ViewBag.Message");
+
+            }
+        </script>
+    }
+
     <div style="height:20px"></div>
     <a asp-action="AddStudent">Add Student</a>
     |
