--- a/SeniorProject/Views/Shared/_Layout.cshtml
+++ b/SeniorProject/Views/Shared/_Layout.cshtml
@@ -40,8 +40,8 @@
     </nav>
     <div class="container body-content">
         @RenderBody()
-        <hr />
-        @*<footer>
+        @*<hr />
+        <footer>
             <p>&copy; 2019 - SeniorProject</p>
         </footer>*@
     </div>
