Fixed some stuff. Added the settings table

--- a/SeniorProject/Views/Home/DeleteBehavior.cshtml
+++ b/SeniorProject/Views/Home/DeleteBehavior.cshtml
@@ -1,6 +1,6 @@
 ﻿@model SeniorProject.Models.Behavior
 
-<h1>Add Behavior</h1>
+<h1>Delete Behavior</h1>
 
 <form method="post">
     @if (ViewBag.Message != null)
