Idr. Almost done. Just before doing goal setting

--- a/SeniorProject/Views/Home/Index.cshtml
+++ b/SeniorProject/Views/Home/Index.cshtml
@@ -22,6 +22,8 @@
     <a asp-action="AddBehavior">Add Behavior</a>
     |
     <a asp-action="DeleteBehavior">Delete Behavior</a>
+    |
+    <a asp-action="EditGoals">Edit Goals</a>
 
     <table class="table table-bordered table-responsive table-hover">
         <tr>
